gitops/apps/template-next/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-next
  namespace: template-next
spec:
  type: ClusterIP
  selector:
    app: template-next
  ports:
    - name: http
      port: 80
      targetPort: 3000
