gitops/apps/template-next/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: template-next
  namespace: template-next
spec:
  parentRefs:
    - name: traefik
      namespace: gateway-system
  hostnames:
    - "template-next.ismola.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: template-next
          port: 80
