gitops/apps/template-next/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: template-next
  namespace: template-next
spec:
  ingressClassName: traefik
  rules:
    - host: template-next.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: template-next
                port:
                  number: 80
